--- a/test03.html
+++ b/test03.html
@@ -4,7 +4,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>Untitled Document</title>
     </head>
-    
+
     <body>
+    Test-brunch4の変更です。
     </body>
 </html>
